// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItemBase snapshot should match snapshot 1`] = `
<ListItemBase>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with className 1`] = `
<ListItemBase
  className="example-class"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="example-class md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with id 1`] = `
<ListItemBase
  id="example-id"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        id="example-id"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with interactive=false 1`] = `
<ListItemBase
  interactive={false}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={false}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isDisabled 1`] = `
<ListItemBase
  isDisabled={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={true}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with isSelected 1`] = `
<ListItemBase
  isSelected={true}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper active"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with lang 1`] = `
<ListItemBase
  lang="en-US"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        lang="en-US"
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with role 1`] = `
<ListItemBase
  role="role"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="role"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with shape 1`] = `
<ListItemBase
  shape="isPilled"
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="isPilled"
        data-size={50}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with showTooltip=true and tooltipContent is exist 1`] = `
<div>
  <li
    aria-describedby="test-ID"
    class="md-list-item-base-wrapper"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="-1"
  >
    Hover me
  </li>
  <div
    class="md-tooltip-label"
    id="test-ID"
  >
    tooltip content
  </div>
</div>
`;

exports[`ListItemBase snapshot should match snapshot with showTooltip=true and tooltipContent is exist 2`] = `
<div>
  <li
    aria-describedby="test-ID"
    class="md-list-item-base-wrapper"
    data-disabled="false"
    data-interactive="true"
    data-padded="false"
    data-shape="rectangle"
    data-size="40"
    role="listitem"
    tabindex="-1"
  >
    Hover me
  </li>
  <div
    class="md-tooltip-label"
    id="test-ID"
  >
    tooltip content
  </div>
  <div
    data-tippy-root=""
    id="tippy-1"
    style="pointer-events: none; z-index: 9999; position: absolute; left: 0px; top: 0px; margin: 0px; transform: translate(0px, 0px);"
  >
    <div
      aria-hidden="true"
      aria-modal="false"
      class="md-modal-container-wrapper"
      data-arrow-orientation="horizontal"
      data-color="primary"
      data-elevation="3"
      data-padded="true"
      data-placement="right"
      data-round="50"
      role="tooltip"
    >
      tooltip content
      <div
        class="md-modal-container-arrow-wrapper"
        data-popper-arrow="true"
        id="arrow1"
        style="position: absolute; top: 0px; transform: translate(0px, 5px);"
      >
        <svg
          aria-hidden="true"
          class="md-modal-arrow-svg"
          data-placement="right"
          height="24"
          viewBox="0 0 12 24"
          width="12"
          xmlns="http://www.w3.org/svg/2000"
        >
          <defs>
            <clippath
              id="modal-arrow-cut-stroke-right"
            >
              <path
                d="m 12 24 l -10 -10 q -2 -2 0 -4 l 10 -10"
              />
            </clippath>
          </defs>
          <path
            clip-path="url(#modal-arrow-cut-stroke-right)"
            d="m 12 24 l -10 -10 q -2 -2 0 -4 l 10 -10"
            data-color="primary"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`ListItemBase snapshot should match snapshot with size 1`] = `
<ListItemBase
  size={40}
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;

exports[`ListItemBase snapshot should match snapshot with style 1`] = `
<ListItemBase
  style={
    Object {
      "color": "pink",
    }
  }
>
  <FocusRing
    isInset={false}
  >
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
      isInset={false}
    >
      <li
        className="md-list-item-base-wrapper"
        data-disabled={false}
        data-interactive={true}
        data-padded={false}
        data-shape="rectangle"
        data-size={40}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="listitem"
        style={
          Object {
            "color": "pink",
          }
        }
        tabIndex={-1}
      >
        Test
      </li>
    </FocusRing>
  </FocusRing>
</ListItemBase>
`;
